Name:           show-exception
Version:        0.3
License:        BSD3
Author:         David Fox <dsf@seereason.com>
Category:       debug
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       https://github.com/seereason/show-exception
Build-Type:     Simple
Synopsis:       A wrapper type V with improved Show instances
Description: Provides Show instances for various types whose official
  Show won't Read. This is particularly intended for exception types,
  which can show up unexpectedly and be difficult to track down.
Cabal-Version: >= 1.9

Library
 Build-Depends:
  base >= 4, mtl, parsec, template-haskell
 Exposed-Modules:
  Debug.Show
