Name:           showplease
Version:        0.2
License:        BSD3
Author:         David Fox <dsf@seereason.com>
Category:       debug
Maintainer:     David Fox <dsf@seereason.com>
Homepage:       http://src.seereason.com/showplease
Build-Type:     Simple
Synopsis:       Show class with instances for types whose official Show won't Read
Cabal-Version: >= 1.9

Library
 Build-Depends:
  base >= 4, parsec, template-haskell
 Exposed-Modules:
  Debug.Loc,
  Debug.Show
 Other-Modules:
  Debug.CopyOfShow
